--- a/index.html
+++ b/index.html
@@ -11,52 +11,73 @@
 </head>
 <body>
   <!-- 제이쿼리 불러오기 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<!-- 풀페이지 불러오기 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.extensions.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.css">
-
-<div class="top-bar-wrap">
-  <div class="top-bar">
-    <nav class="menu-bar flex">
-      <div class="menu-left flex-grow"></div>
-      <ul class="menu-right flex flex-shrink-0 align-center justify-center">
-        <li><a href="#section-1">HOME</a></li>
-        <li><a href="#section-2">ABOUT ME</a></li>
-        <li><a href="#section-4">PORTFOLIO</a></li>
-        <li><a href="#section-5">CONTACT ME</a></li>
-      </ul>
-    </nav>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- 풀페이지 불러오기 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.extensions.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.css">
+  
+  <div class="top-bar-wrap">
+    <div class="top-bar">
+      <nav class="menu-bar flex">
+        <div class="menu-left flex-grow"></div>
+        <ul class="menu-right flex flex-shrink-0 align-center justify-center">
+          <li><a href="#section-1">HOME</a></li>
+          <li><a href="#section-2">ABOUT ME</a></li>
+          <li><a href="#section-4">PORTFOLIO</a></li>
+          <li><a href="#section-5">CONTACT ME</a></li>
+        </ul>
+      </nav>
+    </div>
   </div>
-</div>
-
-<div class="line">
-  <div class="line-tab line-tab-1" data-menuanchor="section-1">
-    <a href="#section-1">Home</a>
+  
+  <div class="line">
+    <div class="line-tab line-tab-1" data-menuanchor="section-1">
+      <a href="#section-1">Home</a>
+    </div>
+    <div class="line-tab line-tab-2" data-menuanchor="section-2">
+      <a href="#section-2">About Me</a>
+    </div>
+      <div class="line-tab line-tab-2" data-menuanchor="section-3">
+      <a href="#section-3">About Me</a>
+    </div>
+    <div class="line-tab line-tab-4" data-menuanchor="section-4">
+      <a href="#section-4">Portfolio</a>
+    </div>
+    <div class="line-tab line-tab-5" data-menuanchor="section-5">
+      <a href="#section-5">Contact Me</a>
+    </div>
+   </div>
+  
+  <div class="site-wrap">
+    <div id="fullpage">
+          <section class="section" data-anchor="section-1">
+            <div class="flower"></div>
+            
+        <div class="section-1-img-wrap">
+          <div><img src="https://i.postimg.cc/bYBg4ZBG/Kakao-Talk-20221109-170219727.jpg" alt=""></div>
+          <div><img src="https://i.postimg.cc/5y636J6N/Kakao-Talk-20221109-170711749.jpg" alt=""></div>
+          <div><img src="https://i.postimg.cc/K8n5KJvL/Kakao-Talk-20221109-170302521.jpg" alt=""></div>
+        </div>
+        <div class="section-1-txt-wrap">
+          <p>HI,<br>
+            MY NAME IS <br>
+            INYOUNG <br> <br>
+            ENJOY <br>MY PORTFOLIO</p>
+        </div>
+        <div class="scroll-wrap">
+        <div class="scroll-downs">
+    <div class="mousey">
+      <div class="scroller"></div>
+    </div>
+          
+  </div><p style="color:#363636;"><strong>scroll down</strong></p></div>
+      </section>
+      <section class="section" data-anchor="section-2">섹션 2</section>
+      <section class="section" data-anchor="section-3">섹션 3</section>
+      <section class="section" data-anchor="section-4">섹션 4</section>
+      <section class="section" data-anchor="section-5">섹션 5</section>
+    </div>
   </div>
-  <div class="line-tab line-tab-2" data-menuanchor="section-2">
-    <a href="#section-2">About Me</a>
-  </div>
-    <div class="line-tab line-tab-2" data-menuanchor="section-3">
-    <a href="#section-3">About Me</a>
-  </div>
-  <div class="line-tab line-tab-4" data-menuanchor="section-4">
-    <a href="#section-4">Portfolio</a>
-  </div>
-  <div class="line-tab line-tab-5" data-menuanchor="section-5">
-    <a href="#section-5">Contact Me</a>
-  </div>
- </div>
-
-<div class="site-wrap">
-  <div id="fullpage">
-    <section class="section" data-anchor="section-1">이곳은 홈</section>
-    <section class="section" data-anchor="section-2">섹션 2</section>
-    <section class="section" data-anchor="section-3">섹션 3</section>
-    <section class="section" data-anchor="section-4">섹션 4</section>
-    <section class="section" data-anchor="section-5">섹션 5</section>
-  </div>
-</div>
 </body>
 </html>
