--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 <!-- circle-progress 불러오기 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
 
+<!-- font-awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
 <div class="more-popup">
   <div class="popup-wrap flex align-center justify-center h-full">
     <div class="in-popup flex flex-col">
@@ -192,24 +196,25 @@
     <ul class="slidelist">
       <li>
         <div class="mr-50px flex align-center justify-center">
-        <div class="mockup-img mockup-img-wrap flex flex-col align-center justify-center"> 
-        <img src="https://i.postimg.cc/9FRL9Jqf/i-Mac-24-inch.png" alt="cgv클론코딩">
-            <h3>CGV</h3>
-          <p> <영화예매홈페이지> </p>
-          <p>영화를 예매할 수 있는 CGV홈페이지 클론코딩입니다.</p>
-          <div>
-            <a class="git-hub" href="https://github.com/dlsduddl/cloning-1" target="blink">G</a>
-            <a class="process" href="https://dlsduddl.github.io/cloning-1/" target="blink">PROCESS</a></div>
-        </div>
-        <div class="mockup-img mockup-img-wrap flex flex-col align-center justify-center">
+          <div class="mockup-img mockup-img-wrap flex flex-col align-center justify-center">
           <img src="https://i.postimg.cc/2SnTcyGR/i-Mac-24-inch-1.png" alt="공차클론코딩">
           <h3>Gong Cha</h3>
-          <p> <카페홈페이지> </p>
+          <p> <카페 홈페이지> </p>
           <p>음료를 주문하고 즐길 수 있는 공차홈페이지 클론코딩입니다.</p>
           <div>
             <a class="wiken" href="https://wiken.io/ken/3675"  target="blink">K</a>
             <a class="process" href="https://dlsduddl.github.io/cloning-2/" target="blink">PROCESS</a></div>
         </div>
+        <div class="mockup-img mockup-img-wrap flex flex-col align-center justify-center"> 
+        <img src="https://i.postimg.cc/9FRL9Jqf/i-Mac-24-inch.png" alt="cgv클론코딩">
+            <h3>CGV</h3>
+          <p> <영화예매 홈페이지> </p>
+          <p>영화를 예매할 수 있는 CGV홈페이지 클론코딩입니다.</p>
+          <div>
+            <a class="git-hub" href="https://github.com/dlsduddl/cloning-1" target="blink">G</a>
+            <a class="process" href="https://dlsduddl.github.io/cloning-1/" target="blink">PROCESS</a></div>
+        </div>
+        
           </div>
       </li>
 
@@ -265,7 +270,36 @@
 </div>
     </section>
     
-    <section class="section" data-anchor="section-5">섹션 5</section>
+    <section class="section" data-anchor="section-5">
+      <div class="section-5-1 flex flex-col align-center justify-center">
+        <div class="heart">
+  <i class="fa fa-heart fa-4x fa-beat"></i>
+</div>
+         <p>THANK YOU FOR WATCHING !</p>
+        <div>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+        </div>
+      </div>
+      <div class="section-5-2">
+      <form
+      onsubmit="sendEmailForm(this); return false;" 
+      action="https://formspree.io/f/meqdovgr"
+      method="POST"
+      >
+        <div class="flex flex-col">
+  <label class="label-message">
+    <input type="email" name="email" placeholder="Please put your e-mail address here">
+  </label>
+  <label class="label-message">
+    <textarea name="message" placeholder="text"></textarea>
+  </label>
+  <button type="submit">Send</button></div>
+        </form>
+</div>
+  
+</section>
   </div>
 </div>
 </body>
