--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="in-popup__body flex-grow p-10px flex">
          <div class="education">
         <h3>EDUCATION & EXPRIENCE</h3>
-        <p><strong>2022</strong> 아카데미컴퓨터학원 웹퍼블리싱 실무과정 수료</p>
+        <p><strong>2022</strong> sbs아카데미컴퓨터학원 웹퍼블리싱 실무과정 수료</p>
         <p><strong>2020-2021</strong> 은혜요양병원 원무부</p>
         <p><strong>2020</strong> 우송대학교 보건의료경영학과 졸업</p>
           <div class="explain">
